--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@types/jest": "29.4.0",
+    "@types/luxon": "^3.2.0",
     "@types/node": "18.14.6",
     "@typescript-eslint/eslint-plugin": "5.54.0",
     "@typescript-eslint/parser": "5.54.0",
@@ -28,5 +29,10 @@
     "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
     "typescript": "4.9.5"
+  },
+  "dependencies": {
+    "@newdash/newdash": "^5.22.0-0",
+    "axios": "^1.3.4",
+    "luxon": "^3.3.0"
   }
 }
