--- a/.eslintrc
+++ b/.eslintrc
@@ -64,13 +64,7 @@
       "error",
       "always"
     ],
-    "camelcase": [
-      "error",
-      {
-        "ignoreImports": true,
-        "ignoreGlobals": true
-      }
-    ],
+    "camelcase": "off",
     "space-infix-ops": "off",
     "@typescript-eslint/space-infix-ops": "error",
     "comma-spacing": "error",
